[tool.poetry]
name = "volga"
version = "0.1.2"
description = "A python framework for deserialization"
authors = ["Yefri Gaitan <yefrigaitan@gmail.com>", "Ecenaz Jen Ozmen <eo2419@columbia.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yefrig/volga"
keywords = ["python", "serialize", "deserialize"]
classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Developers",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
        "Typing :: Typed",
]
exclude = [".gitignore"]

[tool.poetry.dependencies]
python = "^3.6"
coverage = "^5.3"
codecov = "^2.1.9"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
flake8 = "^3.8.4"
mypy = "^0.782"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["volga"]

[tool.coverage.report]
fail_under = 99
show_missing = true
precision = 1
exclude_lines = [
    'raise NotImplementedError',
    'pass',
    '@abstractmethod',
]

