[tool.poetry]
authors = ["Yefri Gaitan <yefrigaitan@gmail.com>", "Ecenaz Jen Ozmen <eo2419@columbia.edu>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
description = "A python framework for deserialization"
exclude = [".gitignore"]
keywords = ["python", "serialize", "deserialize"]
license = "MIT"
name = "volga"
readme = "README.md"
repository = "https://github.com/yefrig/volga"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
codecov = "^2.1.9"
coverage = "^5.3"
flake8 = "^3.8.4"
hypothesis = "^5.37.1"
mypy = "^0.782"
pylint = "^2.6.0"
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.coverage.run]
source = ["volga"]

[tool.coverage.report]
exclude_lines = [
  'raise NotImplementedError',
  'pass',
  '@abstractmethod',
  'if TYPE_CHECKING',
]
fail_under = 90
precision = 1
show_missing = true
